# velo-lang

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/velo/: CMakeLists.txt  main.cpp
cmake/: project_options.cmake  warnings.cmake
docs/architecture/: OVERVIEW.md  RUNTIME.md  SEMANTIC.md
docs/language/: SYNTAX.md
examples/add/: main.velo
examples/errors/: missing_return.velo
examples/hello_world/: main.velo
examples/if_else/: main.velo
examples/locals/: main.velo
examples/parameter/: main.velo
examples/user_function/: main.velo
examples/var/: main.velo
examples/void_function/: main.velo
include/velo/ast/: ast.h  ast_printer.h
include/velo/diagnostic/: diagnostic.h  diagnostic_engine.h
include/velo/driver/: driver.h
include/velo/interpreter/: interpreter.h
include/velo/ir/: function.h  instruction.h  lowerer.h  module.h
include/velo/lexer/: lexer.h  token.h  token_kind.h
include/velo/module/: module_registry.h  module_symbol.h
include/velo/parser/: parser.h
include/velo/runtime/: builtin_function.h  builtin_registry.h  execution_result.h  runtime.h  value.h
include/velo/semantic/: semantic_analyzer.h
include/velo/source/: source_file.h  source_location.h  source_manager.h  source_range.h
src/: CMakeLists.txt
src/ast/: ast_printer.cpp
src/diagnostic/: diagnostic.cpp  diagnostic_engine.cpp
src/driver/: driver.cpp
src/interpreter/: interpreter.cpp
src/ir/: lowerer.cpp
src/lexer/: lexer.cpp  token.cpp  token_kind.cpp
src/module/: module_registry.cpp  module_symbol.cpp
src/parser/: parser.cpp
src/runtime/: builtin_function.cpp  builtin_registry.cpp  runtime.cpp
src/semantic/: semantic_analyzer.cpp
src/source/: source_file.cpp  source_location.cpp  source_manager.cpp  source_range.cpp
tests/: CMakeLists.txt
tests/unit/: smoke_test.cpp
tests/unit/ast/: ast_printer_test.cpp
tests/unit/diagnostic/: diagnostic_engine_test.cpp
tests/unit/driver/: driver_test.cpp
tests/unit/interpreter/: interpreter_test.cpp
tests/unit/lexer/: lexer_test.cpp
tests/unit/parser/: parser_test.cpp
tests/unit/runtime/: builtin_registry_test.cpp  runtime_module_sync_test.cpp
tests/unit/semantic/: semantic_analyzer_test.cpp  semantic_module_test.cpp
tests/unit/source/: source_file_test.cpp
